<resources>
    <string name="app_name">NYTimesSearch</string>
    <string name="action_settings">Settings</string>
    <string name="hint">Enter search query</string>
    <string name="search">Search</string>
    <string name="title_activity_article">ArticleActivity</string>
    <string name="begindate">Begin Date</string>
    <string name="hint2">Pick a date</string>
    <string name="sortorder">Sort Order</string>
    <string name="newsdeskvalues">News Desk Values</string>
    <string name="arts">Arts</string>
    <string name="fashionstyle"><![CDATA[Fashion & Style]]></string>
    <string name="sports">Sports</string>
    <string name="save">Save</string>
    <string name="action_advanced_search">Advanced Search</string>
    <string-array name="sort_array">
        <item>Newest</item>
        <item>Oldest</item>
    </string-array>
    <string name="sort_prompt">Choose an order</string>
</resources>
